added filtration based on sql query