@@ -7,7 +7,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,6 +22,6 @@ public class GroupService {
     public List<String> getAllGroupNames() {
         return groupRepository.findAll().stream()
                 .map(Group::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
